# sidekick-panel

./: .gitignore  README.md  install.py  pyproject.toml  run.py
assets/: bug.pxo  fireball.pxo  wizard.pxo  wizard_base.pxo  wizard_blink.pxo  wizard_star.pxo
cpp/: .gitignore  CMakeLists.txt
cpp/espidf/: CMakeLists.txt
cpp/espidf/main/: CMakeLists.txt  main.cpp
cpp/include/magicpanel/: app.h  atmosphere.h  canvas.h  color.h  drawing.h  effects.h  engine.h  environment.h  event.h  liveness.h  reactions.h  render_layers.h  scene.h  scenes.h  sprite.h  state_store.h  status_panel.h
cpp/src/: app.cpp  atmosphere.cpp  canvas.cpp  color.cpp  drawing.cpp  engine.cpp  environment.cpp  event.cpp  host_main.cpp  liveness.cpp  reactions.cpp  render_layers.cpp  scene.cpp  scenes.cpp  sprite.cpp  state_store.cpp  status_panel.cpp
cpp/tests/: core_tests.cpp
cpp/tools/: generate_sprites.py  hot_reload.sh
docs/: 00-engine.md  10-scene-desk-spirit.md  11-scene-arcane-tree.md  discovery-brief.md  initial-project-dump.md
src/magicpanel/: canvas.py  cli.py  engine_main.py  enginelog.py  eventlog.py  events.py  hot_reload.py  liveness.py  loop.py  reactions.py  sprite.py  state.py
src/magicpanel/desktop/: __init__.py  activity.py  config.py  emit.py  githooks.py  github_actions.py  heartbeat.py  service.py  solar.py  tracking.py  weather.py
src/magicpanel/scenes/: arcane_tree.py  base.py  desk_spirit.py  manager.py
tests/: test_desktop.py  test_events.py  test_reactions.py
